<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="title_activity_main">Movies</string>
    <string name="title">Title</string>
    <string name="user_rating">User Rating</string>
    <string name="user_rating_value">0</string>
    <string name="release_date">Release Date</string>
    <string name="release_date_value">0</string>
    <string name="overview">Plot Synopsis</string>
    <string name="settings">Settings</string>
    <string name="pref_sortby">Sort by</string>
    <string name="sort_by" translatable="false">sortby</string>
    <string name="sort_by_default">popularity.desc</string>
</resources>
